--- a/src/App.css
+++ b/src/App.css
@@ -1,42 +1,81 @@
 #root {
   max-width: 1280px;
   margin: 0 auto;
-  padding: 2rem;
   text-align: center;
 }
 
-.logo {
-  height: 6em;
-  padding: 1.5em;
-  will-change: filter;
-  transition: filter 300ms;
-}
-.logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
-}
-.logo.react:hover {
-  filter: drop-shadow(0 0 2em #61dafbaa);
+.nav-links {
+  display: flex;
+  justify-content: center;
+  gap: 20px;
 }
 
-@keyframes logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.footer-links {
+  display: flex;
+  justify-content: center;
+  gap: 20px;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  a:nth-of-type(2) .logo {
-    animation: logo-spin infinite 20s linear;
-  }
+html,
+body {
+  margin: 0;
+  padding: 0;
 }
 
-.card {
-  padding: 2em;
+.gallery {
+  height: 500px;
+  position: relative;
+  color: white;
 }
 
-.read-the-docs {
-  color: #888;
+.content {
+  padding: 32px;
+  display: flex;
+  align-items: center;
+}
+
+.content-text {
+  text-align: left;
+}
+
+.backdrop {
+  position: absolute;
+  display: block;
+  width: 100%;
+  height: 100%;
+  z-index: -1;
+}
+
+.previous-button {
+  border-radius: 50%;
+  border: 0px;
+  padding: 0px;
+  height: 48px;
+  transform: rotate(180deg);
+}
+
+.next-button {
+  border-radius: 50%;
+  border: 0px;
+  padding: 0px;
+  height: 48px;
+}
+
+.watchlist {
+  background-color: rgb(173, 11, 11);
+  color: white;
+  padding: 4px 20px;
+  border: none;
+  border-radius: 5px;
+}
+
+.top-rated {
+  display: flex;
+  justify-content: space-evenly;
+}
+
+.movie-rating {
+  display: flex;
+  gap: 8px;
+  align-items: center;
 }
