black screen, buttons

--- a/src/App.css
+++ b/src/App.css
@@ -9,12 +9,17 @@
   justify-content: center;
   gap: 20px;
   margin-top: 20px;
+  padding: 20px;
 }
 
 html,
 body {
   margin: 0;
   padding: 0;
+}
+
+.black-screen {
+  background: linear-gradient(to right, black 10%, transparent);
 }
 
 .gallery {
@@ -44,6 +49,7 @@ body {
 .content-text {
   text-align: left;
   width: 40%;
+  margin: 15%;
 }
 
 .backdrop {
@@ -60,6 +66,8 @@ body {
   padding: 0px;
   height: 48px;
   transform: rotate(180deg);
+  position: absolute;
+  left: 5%;
 }
 
 .next-button {
@@ -67,6 +75,8 @@ body {
   border: 0px;
   padding: 0px;
   height: 48px;
+  position: absolute;
+  right: 5%;
 }
 
 .watchlist-button {
@@ -77,19 +87,26 @@ body {
   border-radius: 5px;
 }
 
-.top-rated {
+.watchlist {
+  color: red;
+}
+
+.top-rated-section {
   display: flex;
-  justify-content: space-evenly;
+  gap: 25px;
+  padding: 15px;
+  text-align: left;
 }
 
 .movie-poster {
-  width: 80%;
+  width: 100%;
 }
 
 .movie-rating {
   display: flex;
   gap: 8px;
   align-items: center;
+  color: grey;
 }
 
 .previous-button:hover,
